{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 199,
  "lineage": "d710b211-10b6-e422-1883-9d1f14effffc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0107405cb04f77b6d",
            "domain": "vpc",
            "id": "eipalloc-0107405cb04f77b6d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-215-233-56.compute-1.amazonaws.com",
            "public_ip": "3.215.233.56",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my_eip"
            },
            "tags_all": {
              "Name": "my_eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-04d990ff3a29bf193",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d990ff3a29bf193",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-03db1ea00b57a15d4"
              }
            ],
            "primary_network_interface_id": "eni-03db1ea00b57a15d4",
            "private_dns": "ip-192-168-4-10.ec2.internal",
            "private_ip": "192.168.4.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a698ea6aced3d0ad",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0087eb8fbf3dcf77c",
            "tags": {
              "Name": "MY_EC2"
            },
            "tags_all": {
              "Name": "MY_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02679a4261c439c07"
            ]
          },
          "dependencies": [
            "aws_network_interface.priv_nic",
            "aws_security_group.priv_sg",
            "aws_subnet.priv_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub_machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:485146087273:instance/i-0b9731f1e0a04e6b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b9731f1e0a04e6b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-00da3ec3c9dc50e57"
              }
            ],
            "primary_network_interface_id": "eni-00da3ec3c9dc50e57",
            "private_dns": "ip-192-168-1-10.ec2.internal",
            "private_ip": "192.168.1.10",
            "public_ip": "3.219.216.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05a08ddf1570f1b91",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0982950f3c052b8dd",
            "tags": {
              "Name": "MY_EC2"
            },
            "tags_all": {
              "Name": "MY_EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f51894226ac06fd4"
            ]
          },
          "dependencies": [
            "aws_network_interface.pub_nic",
            "aws_security_group.pub_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:internet-gateway/igw-0087eb0ce44ffdc22",
            "id": "igw-0087eb0ce44ffdc22",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_gw"
            },
            "tags_all": {
              "Name": "kamil_gw"
            },
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0107405cb04f77b6d",
            "connectivity_type": "public",
            "id": "nat-0344019753a7c5625",
            "network_interface_id": "eni-02758a7a7f90545f1",
            "private_ip": "192.168.1.165",
            "public_ip": "3.215.233.56",
            "subnet_id": "subnet-0982950f3c052b8dd",
            "tags": {
              "Name": "kamil-NGW"
            },
            "tags_all": {
              "Name": "kamil-NGW"
            }
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "priv_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-03db1ea00b57a15d4",
            "id": "eni-03db1ea00b57a15d4",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0a:ad:8b:56:0b:7d",
            "owner_id": "485146087273",
            "private_ip": "192.168.4.10",
            "private_ip_list": [
              "192.168.4.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.4.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-02679a4261c439c07"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0087eb8fbf3dcf77c"
          },
          "dependencies": [
            "aws_security_group.priv_sg",
            "aws_subnet.priv_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "pub_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:network-interface/eni-00da3ec3c9dc50e57",
            "id": "eni-00da3ec3c9dc50e57",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:11:83:a8:c3:4b",
            "owner_id": "485146087273",
            "private_ip": "192.168.1.10",
            "private_ip_list": [
              "192.168.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "192.168.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f51894226ac06fd4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0982950f3c052b8dd"
          },
          "dependencies": [
            "aws_security_group.pub_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:route-table/rtb-00ec311357f1e1ed3",
            "id": "rtb-00ec311357f1e1ed3",
            "owner_id": "485146087273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0087eb0ce44ffdc22",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kamil_public_rt"
            },
            "tags_all": {
              "Name": "kamil_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:route-table/rtb-013f6eaebf9b5b3bc",
            "id": "rtb-013f6eaebf9b5b3bc",
            "owner_id": "485146087273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0344019753a7c5625",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kamil_priv_rt"
            },
            "tags_all": {
              "Name": "kamil_priv_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.ngw",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac3f591bc5dec88a",
            "route_table_id": "rtb-013f6eaebf9b5b3bc",
            "subnet_id": "subnet-0087eb8fbf3dcf77c"
          },
          "dependencies": [
            "aws_eip.nateip",
            "aws_nat_gateway.ngw",
            "aws_route_table.priv",
            "aws_subnet.priv_sub",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094727ed81a8d5c9d",
            "route_table_id": "rtb-00ec311357f1e1ed3",
            "subnet_id": "subnet-0982950f3c052b8dd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.example",
            "aws_subnet.pub_sub",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "priv_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-02679a4261c439c07",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02679a4261c439c07",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_priv_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "priv_SG_EC2"
            },
            "tags_all": {
              "Name": "priv_SG_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:security-group/sg-0f51894226ac06fd4",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f51894226ac06fd4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_pub_sg",
            "name_prefix": "",
            "owner_id": "485146087273",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Pub_SG_EC2"
            },
            "tags_all": {
              "Name": "Pub_SG_EC2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-0087eb8fbf3dcf77c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0087eb8fbf3dcf77c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_private_subnet"
            },
            "tags_all": {
              "Name": "kamil_private_subnet"
            },
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:subnet/subnet-0982950f3c052b8dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0982950f3c052b8dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "485146087273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "kamil_Public_subnet"
            },
            "tags_all": {
              "Name": "kamil_Public_subnet"
            },
            "vpc_id": "vpc-0f0c93ebd3cf6369d"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:485146087273:vpc/vpc-0f0c93ebd3cf6369d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0aa83c2ead2c846a0",
            "default_route_table_id": "rtb-08eb470173f6d5920",
            "default_security_group_id": "sg-0c0cbdbbe8cd4ca12",
            "dhcp_options_id": "dopt-033d2b1ddea21925e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f0c93ebd3cf6369d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08eb470173f6d5920",
            "owner_id": "485146087273",
            "tags": {
              "Name": "kamil_vpc"
            },
            "tags_all": {
              "Name": "kamil_vpc"
            }
          }
        }
      ]
    }
  ]
}